--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.447.0",
     "markdown-to-txt": "^2.0.1",
-    "next": "14.1.4",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "next-video": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
